@@ -1,3 +1,9 @@
+2009-06-05  Adam Endrodi  <adam.endrodi@blumsoft.eu>
+
+	* matchbox/core/mb-wm-layout.c (mb_wm_layout_real_layout_free):
+	  Undoing Kimmo's change not to reconfigure hidden windows.
+	  Let's do it in h-d.
+
 2009-06-04  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>
 
 	Patch from Laszlo for NB#120014.
